Add Tez to DEV (#3)